--- a/cameraman/index.html
+++ b/cameraman/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cameraman</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    
+    <main>
+        <h1>О курсе</h1>
+        <section class="first-sec">
+            <div>
+                <p class="paragraph-first">Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино —
+                    нет. При этом без подготовки бывает трудно получить от просмотра удовольствие.</p>
+                <p class="paragraph-second">На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и
+                    узнаем, как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях
+                    жанров и рассмотрим важнейшие картины, от «Гражданина Кейна» до «Матрицы».</p>
+            </div>
+             <img src="./img/camera1.svg" alt="cameraman1">
+        </section>
+        <section class="second-sec">
+            <img src="./img/camera2.svg" alt="cameraman2">
+            <ul class="list">
+                <li>
+                    <h3>8 занятий </h3>
+                    <p>Для погружения
+                        в кинематограф</p>
+                </li>
+                <li>
+                    <h3>8 занятий </h3>
+                    <p>Для погружения
+                        в кинематограф</p>
+                </li>
+                <li>
+                    <h3>8 занятий </h3>
+                    <p>Для погружения
+                        в кинематограф</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+
     
 </body>
 </html>
